tests/NormalTests/paczka1/small_fuzzy/90347323.err
Error in line 3: YzA A405 9,7
Error in line 7: Xk56ww S676 48,5
Error in line 13: DVD S644 5,8
